# awesome-steinschliff

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMANDS_USAGE.md  CONTRIBUTING.md  DEVELOPING.md  LICENSE  Makefile  README.md  README_en.md  README_ru.md  babel.cfg  justfile  mkdocs.yml  pyproject.toml  structures.csv
.cursor/: mcp.json
.cursor/rules/: project.mdc
.github/workflows/: ci.yml
docs/: commands.md  content.md  contributing.md  development.md  index.md
schliffs/: B227.yaml  B3312.yaml  P1-1.yaml  P10-3.yaml  S11-2.yaml  S11-3.yaml  S12-1.yaml  S12-12.yaml  S12-16.yaml  S12-2-07.yaml  S12-4.yaml  S12-6.yaml  S13-5.yaml  S13-6.yaml  TZ1-1.yaml  Р3-2.yaml  Р3-3.yaml  С12-1.yaml  С8-1.yaml
schliffs/atomic/: AC3.yaml  AC4.yaml  AC5.yaml  AM1.yaml  AM2.yaml  AM6.yaml  AM7.yaml  AW1.yaml  AW7.yaml  _meta.yaml
schliffs/beme/: B2211.yaml  B227.yaml  B3312.yaml  _meta.yaml
schliffs/ekiptime/: AC3.yaml  AC4.yaml  AC5.yaml  AM2.yaml  AM26.yaml  AM3.yaml  AM6.yaml  AM7-2.yaml  AM7.yaml  AW1.yaml  AW2.yaml  AW22.yaml  AW4.yaml  AW7.yaml  AW8.yaml  G1.yaml  SIGMA.yaml  UGOL1.yaml  UGOL13.yaml  _meta.yaml  sv77.yaml
schliffs/fischer/: C1-1.yaml  C12-1.yaml  C12-7.yaml  C3-1.yaml  C8-1.yaml  P1-1.yaml  P10-1.yaml  P10-3.yaml  P11-1.yaml  P11-2.yaml  P22-6.yaml  P3-1.yaml  P3-2.yaml  P3-3.yaml  P5-0.yaml  P5-1.yaml  P5-9.yaml  P9-2.yaml  TZ1-1.yaml  _meta.yaml  Р3-1.yaml  Р3-2.yaml  Р3-3.yaml  Р5-0.yaml  Р5-9.yaml  С1-1.yaml  С12-1.yaml  С3-1.yaml  С8-1.yaml
schliffs/fischer26/: F-110.yaml  F-115.yaml  F-138.yaml  F-171.yaml  F-198.yaml  F-201.yaml  F-205.yaml  F-211.yaml  F-226.yaml  F-230.yaml  F-256.yaml  F-275.yaml  F-311.yaml  F-359.yaml  F-372.yaml  F-390.yaml  F-395.yaml  _meta.yaml
schliffs/madshus/: M61.yaml  M61B.yaml  M61F.yaml  M61F2.yaml  M61В.yaml  M62.yaml  M63.yaml  _meta.yaml
schliffs/marsport/: C100.yaml  F1.yaml  M100.yaml  SM15-5.yaml  _meta.yaml
schliffs/mass sport/: -15T1.yaml  Fit-10.yaml  Fit-4.yaml  T1.3.yaml  T1.3fa.yaml  T20-10.yaml  _meta.yaml
schliffs/ramsau/: OH3.yaml  Pl1.yaml  Pl2.yaml  R2.yaml  S11-1.yaml  S11-2.yaml  S11-3.yaml  S12-1.yaml  S12-12.yaml  S12-14.yaml  S12-16.yaml  S12-2-07.yaml  S12-2.yaml  S12-3.yaml  S12-4.yaml  S12-6.yaml  S12-7.yaml  S13-4.yaml  S13-5-08.yaml  S13-5.yaml  S13-6.yaml  T1.yaml  T4.yaml  V1.yaml  _meta.yaml
schliffs/rossignol/: A1.yaml  A11.yaml  A15.yaml  A30.yaml  A34.yaml  A36.yaml  A6.yaml  A6blue.yaml  A6green.yaml  FF3.yaml  FF3b.yaml  RC5.yaml  RU12.yaml  RU15.yaml  RU18.yaml  RUW1.yaml  RW1.yaml  RW691.yaml  RW692.yaml  _meta.yaml
schliffs/salomon/: G1.yaml  SL1.yaml  SL21.yaml  SL22.yaml  SL32.yaml  SLRGL.yaml  _meta.yaml
schliffs/serviccer/: 77.yaml  G2-2.yaml  G3.1.yaml  R10-3.yaml  R10.yaml  R11-2.yaml  SR12-3.yaml  SR15.yaml  SR21.yaml  SR23.yaml  SV100.yaml  SV150.yaml  SV600.yaml  SV700.yaml  V7-3.yaml  W1.yaml  _meta.yaml
schliffs/skipole/: W28.yaml  W30.yaml  X0.yaml  X20.yaml  X25.yaml  _meta.yaml  Х0.yaml  Х20.yaml  ХО.yaml
schliffs/svecky/: 16-4.yaml  LiB.yaml  P51-33.yaml  PRG.yaml  TP50.yaml  VT1.3.yaml  VT3-2.yaml  VT322.yaml  _meta.yaml
schliffs/uventa/: 330.yaml  729.yaml  C110X.yaml  N33.yaml  SL7.yaml  X1W.yaml  X3LS.yaml  Z1.yaml  _meta.yaml
scripts/: __init__.py  check_cyrillic.py  cli.py  fix_snow_temperature.py  gen_readme.py  gen_readme_new.py  gen_site.py  manage_translations.py  validate_snow_conditions.py
scripts/cli/: __init__.py  app.py  common.py
scripts/templates/: readme_en_header.md  readme_ru_header.md
snow_conditions/: blue.yaml  brown.yaml  green.yaml  orange.yaml  pink.yaml  red.yaml  violet.yaml  yellow.yaml
snow_types/: artificial.yaml  blue.yaml  fine_grained.yaml  frozen.yaml  green.yaml  icy.yaml  natural.yaml  trancformed.yaml  wet.yaml
steinschliff/: __init__.py  __main__.py  config.py  exceptions.py  formatters.py  generator.py  i18n.py  logging.py  models.py  paths.py  utils.py
steinschliff/catalog/: __init__.py  selection.py
steinschliff/cli/: __init__.py  __main__.py  common.py  entry_point.py  error_handler.py
steinschliff/export/: __init__.py  csv.py  json.py
steinschliff/io/: __init__.py  yaml.py
steinschliff/pipeline/: __init__.py  readme.py
steinschliff/snow_conditions/: __init__.py  registry.py
steinschliff/templates/: base.jinja2  header.jinja2  intro_ru.jinja2  intro_ru.md  macros.jinja2  readme.jinja2  service.jinja2  table.jinja2  toc.jinja2
steinschliff/ui/: __init__.py  rich.py
tests/: conftest.py  pytest.ini
tests/steinschliff/: test_catalog_selection.py  test_config.py  test_export_csv.py  test_formatters.py  test_generator.py  test_generator_extra.py  test_i18n.py  (+3 more)
(+25 files in other folders)
