[project]
name = "awesome-steinschliff"
version = "0.1.0"
description = "A curated list of amazingly awesome nordic ski SteinSchliff"
authors = [
    {name = "Mihail Klimin",email = "klinkin@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "rich (>=13.7.1,<14.0.0)",
    "typer[all] (>=0.12.5,<1.0.0)",
    "ruamel-yaml (>=0.18.16,<0.19.0)"
]

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
mypy = "^1.9.0"
pre-commit = "^3.7.0"
ruff = "^0.4.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
types-pyyaml = "^6.0.12.20250915"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = [
  "BLE",
  "C90",
  "E",
  "F",
  "G",
  "I",
  "ICN",
  "ISC",
  "PLE",
  "Q",
  "RUF006",
  "RUF100",
  "T10",
  "T20",
  "TID",
  "UP",
  "W",
]
lint.ignore = [
  "ISC001",  # Конфликтует с форматировщиком
]
